objects/WRF_Client_Report_View__mdt.object
<CustomObject>
    <description>Mapping for Columns shown on Client Report view based on system selected on Job Card</description>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Keep it checked if we need field name to be considered as selected by default while generating client report view</description>
        <label>Is Selected?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>System_Used__c</fullName>
        <label>System Used</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>WRF Client Report View</label>
    <pluralLabel>WRF Client Report Views</pluralLabel>
</CustomObject>